<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".SetUpActivity">

        <TextView
            style="@style/MirrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_up" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/mood_detection_checkbox"
                style="@style/ConfigurationItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/mood_detection_option" />

            <TextView
                android:id="@+id/mood_guide_text"
                style="@style/ConfigurationItemText"
                android:textSize="13sp"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_guide"/>
        </LinearLayout>


        <TextView
            style="@style/ConfigurationDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mood_explanation" />

        <LinearLayout
            android:id="@+id/location_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/location_title"
                    style="@style/ConfigurationItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/location_description"
                    style="@style/ConfigurationDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/location_title"
                    android:layout_marginLeft="@dimen/item_margin"
                    android:layout_toRightOf="@id/location_title"
                    android:text="没有检测出位置，网络未连接么" />
            </RelativeLayout>
            <EditText
                android:id="@+id/city"
                style="@style/ConfigurationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_margin"
                android:hint="@string/city"
                android:inputType="numberDecimal|numberSigned" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/latitude"
                    style="@style/ConfigurationEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/item_margin"
                    android:layout_weight="1"
                    android:hint="@string/latitude"
                    android:inputType="numberDecimal|numberSigned" />

                <EditText
                    android:id="@+id/longitude"
                    style="@style/ConfigurationEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/longitude"
                    android:inputType="numberDecimal|numberSigned" />
            </LinearLayout>
        </LinearLayout>



        <Button
            android:id="@+id/launch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch"/>

    </LinearLayout>


</ScrollView>
