<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/smile_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="20sp"
            android:text="@string/please_wait" />
        <Button
            android:id="@+id/detect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            android:text="@string/detect"/>
        <Button
            android:id="@+id/choose_pic"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/choose"/>

    </LinearLayout>

</LinearLayout>
